--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "api.js",
+  "name": "homepageapi",
   "version": "1.0.0",
-  "description": "All api for app",
+  "description": "this is about node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "author": "Nithya",
+  "keywords": [
+    "node",
+    "express",
+    "mongo"
+  ],
+  "author": "Nithya Kalyani",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.0"
   }
 }
